[package]
name = "anothertls"
version = "0.1.0"
edition = "2021"

[dependencies]
x509-cert = {version = "0.1.1", default-features = false }
ibig = { version = "0.3.6", default-features = false }

[profile.release]
debug = true
# log = {version = "0.4.17", optional = true }
# [features]
# debug = ["dep:log"]
