[package]
name = "anothertls"
version = "0.1.2"
edition = "2021"
authors = ["Tobias Müller <git@tsmr.eu>"]
readme = "../README.md"
description = "Yet another TLS implementation, but written from scratch (including the crypto) in pure Rust - of course."
repository = "https://github.com/otsmr/AnotherTLS"
categories = ["network-programming", "cryptography"]
license-file = "../LICENSE"

[dependencies]
ibig = { version = "0.3.6", default-features = false }

# log = {version = "0.4.17", optional = true }
